Added style.scss file and Modified in html file; changed <p> tags to <div> tag.

--- a/index.html
+++ b/index.html
@@ -29,21 +29,21 @@
     
     <!-- Section for giving border at bottom. -->
     <section class="main-text">
-      <p>Welcome to my styled page!</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua....</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      <div class="div-text">Welcome to my styled page!</div>
+      <div class="div-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua....</div>
+      <div class="div-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
     </section>
 
     <!-- Section for separating bordered paras. -->
     <section class="bordered-text">
-      <p>Lorem ipsum is simply dummy text of printing and typesetting industry.</p>
-      <p>Lorem ipsum is simply dummy text of printing and typesetting industry.</p>
-      <p>Lorem ipsum is simply dummy text of printing and typesetting industry.</p>
+      <div class="div-text">Lorem ipsum is simply dummy text of printing and typesetting industry.</div>
+      <div class="div-text">Lorem ipsum is simply dummy text of printing and typesetting industry.</div>
+      <div class="div-text">Lorem ipsum is simply dummy text of printing and typesetting industry.</div>
     </section>
     
     <!-- Section for addressing. -->
     <section class="address">  
-      <p>Made 25 January 2018<br />by myself.</p>
+      <div class="div-text">Made 25 January 2018<br />by myself.</div>
     </section>
   </main>
 </body>
